Move plugin folder to app folder
Also add the plugin loader to the git repository.

Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ server*.log
 config.ini
 **/__pycache__/*
 database.dia~
-plugins/*
-!plugins/__init__.py
+app/plugins/*
+!app/plugins/plugin.py
+!app/plugins/__init__.py
