Update Kratos and Oathkeeper
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/ory-config/kratos/kratos.yml
+++ b/ory-config/kratos/kratos.yml
@@ -15,36 +15,31 @@ selfservice:
       enabled: false
 
   verify:
-    return_to: http://127.0.0.1:4455/
+    request_lifespan: 1h
+    link_lifespan: 24h
 
   login:
     request_lifespan: 10m
     after:
+      default_return_to: http://127.0.0.1:4455/
       password:
-        -
-          job: session
-        -
-          job: redirect
-          config:
-            default_redirect_url: http://127.0.0.1:4455/
-            allow_user_defined_redirect: true
+        default_return_to: http://127.0.0.1:4455/
+        hooks:
+          - hook: revoke_active_sessions
 
   registration:
     request_lifespan: 10m
     after:
+      default_return_to: http://127.0.0.1:4455/
       password:
-        -
-          job: verify
-        -
-          job: session
-        -
-          job: redirect
-          config:
-            default_redirect_url: http://127.0.0.1:4455/
-            allow_user_defined_redirect: true
+        default_return_to: http://127.0.0.1:4455/
+        hooks:
+          - hook: session
+          - hook: verify
 
 log:
   level: debug
+  format: text
 
 secrets:
   session:
@@ -54,7 +49,6 @@ urls:
   login_ui: http://127.0.0.1:4455/auth/login
   registration_ui: http://127.0.0.1:4455/auth/registration
   error_ui: http://127.0.0.1:4455/error
-  profile_ui: http://127.0.0.1:4455/profile
   verify_ui: http://127.0.0.1:4455/verify
 
   # These are undefined because not available in this demo
@@ -64,7 +58,7 @@ urls:
     public: http://127.0.0.1:4455/.ory/kratos/public/
     admin: http://pirate-kratos:4434
   default_return_to: http://127.0.0.1:4455/
-  whitelisted_return_to_domains:
+  whitelisted_return_to_urls:
     - http://127.0.0.1:4455
 
 hashers:
