Update ORY and fix registration rendering
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   pirate-kratos-migrate:
     image: oryd/kratos:latest-sqlite
     environment:
-      - DSN=sqlite:///home/ory/sqlite/db.sqlite?_fk=true
+      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
       - SQA_OPT_OUT=true
     volumes:
       -
         type: volume
         source: kratos-sqlite
-        target: /home/ory/sqlite
+        target: /var/lib/sqlite
         read_only: false
       -
         type: bind
@@ -95,7 +95,7 @@ services:
       - "4434:4434" # admin
     restart: unless-stopped
     environment:
-      - DSN=sqlite:///home/ory/sqlite/db.sqlite?_fk=true
+      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
       - SQA_OPT_OUT=true
     command:
       serve -c /etc/pirate-config/kratos.yml --dev
@@ -103,7 +103,7 @@ services:
       -
         type: volume
         source: kratos-sqlite
-        target: /home/ory/sqlite
+        target: /var/lib/sqlite
         read_only: false
       -
         type: bind
