Complete profile update flow
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/ory-config/kratos/kratos.yml
+++ b/ory-config/kratos/kratos.yml
@@ -26,6 +26,8 @@ selfservice:
   verify:
     request_lifespan: 1h
     link_lifespan: 24h
+    after:
+      default_return_to: http://127.0.0.1:8888/
 
   login:
     request_lifespan: 10m
