Start work on database initialization
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,10 @@ services:
         target: /app/config
       -
         type: bind
+        source: ./db.sql
+        target: /app/db.sql
+      -
+        type: bind
         source: ./app
         target: /app/app
       -
