Retrieve permissions for different roles
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     image: crew-db:latest
     depends_on:
       - postgres-db
+      - pirate-kratos
     ports:
       - "8888:8888"
     volumes:
@@ -66,7 +67,6 @@ services:
 
   pirate-kratos:
     depends_on:
-      - crew-db
       - pirate-kratos-migrate
     image: oryd/kratos:latest-sqlite
     ports:
