Add member numbers for users
Also fix logout and check for admin permissions for deciding when to
show the admin menu. The first registered user will recieve the admin
role.

Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/ory-config/kratos/kratos.yml
+++ b/ory-config/kratos/kratos.yml
@@ -17,6 +17,10 @@ selfservice:
           default_browser_return_url: http://127.0.0.1:8888/
           hooks:
             - hook: revoke_active_sessions
+    
+    logout:
+      after:
+        default_browser_return_url: http://127.0.0.1:8888/
 
     registration:
       ui_url: http://127.0.0.1:8888/auth/registration
