Remove unused dependency
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asyncpg
-bcrypt
-tornado
-pytz
-ory-kratos-client
+asyncpg==0.21
+tornado==6.0.4
+pytz==2020.1
+ory-kratos-client==0.4.6a1
+aiosmtplib==1.1.3
