Change license to GPLv3
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,8 @@ services:
     networks:
       - intranet
 
-  crew-db:
-    image: crew-db:latest
+  member-port:
+    image: member-port:latest
     depends_on:
       - postgres-db
       - pirate-kratos
