docs: Add a contribution guide to README (#3)
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   postgres-db:
     image: postgres
     environment:
-      POSTGRES_DB: crewdb
+      POSTGRES_DB: memberportdb
       POSTGRES_USER: super
       POSTGRES_PASSWORD: super
       PGDATA: /data/postgres
