fix: use a seperate endpoint for new users (#4)
Fixes #4

Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/ory-config/kratos/kratos.yml
+++ b/ory-config/kratos/kratos.yml
@@ -26,9 +26,9 @@ selfservice:
       ui_url: http://127.0.0.1:8888/auth/registration
       request_lifespan: 10m
       after:
-        default_browser_return_url: http://127.0.0.1:8888/
+        default_browser_return_url: http://127.0.0.1:8888/new-member
         password:
-          default_browser_return_url: http://127.0.0.1:8888/
+          default_browser_return_url: http://127.0.0.1:8888/new-member
           hooks:
             - hook: session
 
