Add build: . to member-port so I can build witth docker-compose build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
 
   member-port:
     image: member-port:latest
+    build: .
     depends_on:
       - postgres-db
       - pirate-kratos
