--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,4 @@
-# This file is a template, and might need editing before it works on your project.
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python/tags/
+---
 image: python:3.7-alpine
 
 # Change pip's cache directory to be inside the project directory since we can
@@ -32,6 +30,11 @@ bandit-run:
   script:
     - pip install bandit
     - bandit -r app
+
+yamllint:
+  script:
+    - pip install yamllint
+    - find . -name \*yml | xargs yamllint
 
 # run:
 #   script:
