config: add build context to docker-compose
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,9 @@ services:
 
   member-port:
     image: member-port:latest
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       - postgres-db
       - pirate-kratos
