--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "",
   "scripts": {
     "watch": "npx webpack watch --mode development",
-    "build": "npx webpack"
+    "build": "npx webpack",
+    "lint": "eslint './assets/**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "awesome-typescript-loader": "^5.2.1",
     "bulma": "^0.9.2",
     "css-loader": "^5.2.0",
+    "eslint": "^7.23.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-jsx": "^10.0.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-standard": "^5.0.0",
     "mini-css-extract-plugin": "^1.4.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
