--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memberport",
   "version": "1.0.0",
-  "description": "A membership management system, written in Python with the [Tornado web-framework](https://www.tornadoweb.org/en/stable/) and [ORY Kratos](https://www.ory.sh/kratos) as the authentication and identification handler.",
+  "description": "A membership management system, written in Python with the [Tornado web-framework](https://www.tornadoweb.org/en/stable/) and [Ory Kratos](https://www.ory.sh/kratos) as the authentication and identification handler.",
   "main": "",
   "scripts": {
     "watch": "npx webpack watch --mode development",
@@ -9,27 +9,25 @@
     "lint": "eslint './assets/**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "bulma": "^0.9.2",
-    "css-loader": "^5.2.0",
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "bulma": "^0.9.3",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard-jsx": "^10.0.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-standard": "^5.0.0",
-    "mini-css-extract-plugin": "^1.4.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^11.0.1",
-    "ts-loader": "^8.1.0",
-    "typescript": "^3.9.9",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
+    "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@ag-grid-community/all-modules": "^25.1.0"
+    "@ag-grid-community/all-modules": "^25.3.0"
   }
 }
