config: update python dependencies
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-asyncpg==0.21
-tornado==6.1
-pytz==2020.4
+asyncpg~=0.23
+tornado~=6.1
 ory-kratos-client==0.5.4a1
-aiosmtplib==1.1.4
-celery==5.0
+aiosmtplib~=1.1
+celery~=5.1
