feat: add frontend for moving around geography
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - postgres-db
       - pirate-kratos
+      - rabbitmq
     ports:
       - "8888:8888"
     volumes:
