--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   pirate-kratos-migrate:
-    image: oryd/kratos:v0.9.0-alpha.3
+    image: oryd/kratos:v0.10.1
     environment:
       - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
       - SQA_OPT_OUT=true
@@ -130,7 +130,7 @@ services:
   pirate-kratos:
     depends_on:
       - pirate-kratos-migrate
-    image: oryd/kratos:v0.9.0-alpha.3
+    image: oryd/kratos:v0.10.1
     ports:
       - "4433:4433" # public
       - "4434:4434" # admin
