--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "eslint './assets/**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "bulma": "^0.9.3",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard-jsx": "^10.0.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "mini-css-extract-plugin": "^2.2.0",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^12.1.0",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
-    "webpack": "^5.59.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "bulma": "^0.9.4",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.19.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "@ag-grid-community/all-modules": "^25.3.0"
+    "@ag-grid-community/client-side-row-model": "^28.0.2",
+    "@ag-grid-community/core": "^28.0.2"
   }
 }
