--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asyncpg==0.25
-tornado==6.1
+asyncpg==0.26
+tornado==6.2
 pytz==2022.1
-ory-kratos-client==0.9.0a3
+ory-kratos-client==0.10.1
 aiosmtplib==1.1.6
-celery==5.2.3
+celery==5.2.7
