bugfix: Error inte profile template if gender value missing
\+ gitignore fix
\+ Read more gender link

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .vscode/*
-venv/* 
+venv/*
 .idea/*
 tornado*.log
 server*.log
@@ -16,3 +16,4 @@ node_modules
 *bundle.css*
 db_data/*
 static/tinymce/*
+*.code-workspace
