feat: make Kratos use postgres and add db prefix
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   pirate-kratos-migrate:
     image: oryd/kratos:v0.10.1
     environment:
-      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
+      - DSN=postgres://super:super@postgres-db:5432/memberportdb?sslmode=disable&max_conns=20&max_idle_conns=4
       - SQA_OPT_OUT=true
     volumes:
       -
@@ -136,7 +136,7 @@ services:
       - "4434:4434" # admin
     restart: unless-stopped
     environment:
-      - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
+      - DSN=postgres://super:super@postgres-db:5432/memberportdb?sslmode=disable&max_conns=20&max_idle_conns=4
       - SQA_OPT_OUT=true
     command:
       serve -c /etc/pirate-config/kratos.yml --dev --watch-courier
