refactor: change name of assets folder to frontend
Signed-off-by: Jakob Sinclair <sinclair.jakob@mailbox.org>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "npx webpack watch --mode development",
     "build": "npx webpack",
-    "lint": "eslint './assets/**/*.{js,ts,tsx}'"
+    "lint": "eslint './frontend/**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
