--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,7 @@
     "importsNotUsedAsValues": "error",
 
     "paths": {                                /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-      "@memberport/*": ["web-client/*"],
+      "@memberport/*": ["frontend/*"],
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [                            /* List of folders to include type definitions from. */
@@ -75,7 +75,6 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "./web-client",
-    "./assets/ts"
+    "./frontend",
   ]
 }
